--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,4 +2,16 @@
 
 {% block content %}
 
+
+    <footer>
+        <nav class="footer-nav">
+            <ul class="ul-nav">
+                <li>LOGO</li>
+                <li>home</li>
+                <li>menu</li>
+                <li>contact</li>
+            </ul>
+        </nav>
+    </footer>
+
 {% endblock %}
