--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -3,8 +3,8 @@
 {% block content %}
 
     <header>
-        <nav class="geader-nav">
-            <ul class="ul-header-nav">
+        <nav class="header-nav">
+            <ul class="ul-nav">
                 <li>LOGO</li>
                 <li>home</li>
                 <li>menu</li>
