--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -8,25 +8,27 @@ body {
     background: linear-gradient(90deg, rgba(249, 83, 56, 1) 0%, rgb(82, 46, 46) 50%, rgba(0, 0, 0, 0.95) 100%);
 }
 
-.box {
+.box-general {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 90%;
+    width: 100%;
     margin: auto;
     height: 100% !important;
 }
 
+.ul-nav {
+    display: flex;
+    justify-content: space-around;
+
+}
+
+
 /* === HEADER === */
-header {
+header, footer {
     color: #fff;
     background: #1b1b1b;
     width: 100%;
     margin: 0;
-}
-
-.ul-header-nav {
-    display: flex;
-    justify-content: space-around;
-
+    padding: 30px 0;
 }
