commente & refac code

--- a/restaurant/templates/restaurant/index.html
+++ b/restaurant/templates/restaurant/index.html
@@ -2,12 +2,16 @@
 {% load static %}
 
 {% block content %}
+    <!-- Titre1 -->
     <div class="hero">
         <h1 class="titre1 text-center text-light">La Vieille Mairie</h1>
     </div>
+
+    <!-- Categories liste -->
     <div class="container px-4 py-5" id="custom-cards">
         <h2 class="pb-2 border-bottom">Categories</h2>
 
+        <!-- Card 1 -->
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
@@ -36,6 +40,7 @@
                 </div>
             </div>
 
+            <!-- Card 2 -->
             <div class="col">
 
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
@@ -65,6 +70,7 @@
 
             </div>
 
+            <!-- Card 3 -->
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                      style="background-image: url('https://img.restaurantguru.com/rd21-Restaurant-grill-La-Vieille-Mairie-food.jpg');">
@@ -91,10 +97,8 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-
-
-
 
 {% endblock %}
