--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -5,19 +5,28 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
+
+                <!-- Titre1 -->
                 <a class="navbar-brand" href="#">LVM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
+
+                        <!-- Acceuil -->
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
+
+                        <!-- A propos -->
                         <li class="nav-item">
                             <a class="nav-link" href="#">À Propos</a>
                         </li>
+
+                        <!-- Categories liste -->
                         <div class="dropdown">
                             <button class="btn btn-info dropdown-toggle" type="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
@@ -35,13 +44,16 @@
 
                             </ul>
                         </div>
-
-
                     </ul>
+
+                    <!-- Barre de recherche -->
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" type="search" placeholder="Rechercher" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">
+                            Rechercher
+                        </button>
                     </form>
+
                 </div>
             </div>
         </nav>
