--- a/templates/base.html
+++ b/templates/base.html
@@ -21,16 +21,18 @@
 </head>
 
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
+<!-- Box Generale -->
 <div class="box-general">
 
-{% include 'includes/header.html' %}
+    {% include 'includes/header.html' %}
 
-    {% block content %}
-    {% endblock %}
+    {% block content %}{% endblock %}
 
-{% include 'includes/footer.html' %}
+    {% include 'includes/footer.html' %}
 
 </div>
 </body>
