--- a/restaurant/templates/restaurant/index.html
+++ b/restaurant/templates/restaurant/index.html
@@ -11,13 +11,15 @@
     <div class="container px-4 py-5" id="custom-cards">
         <h2 class="pb-2 border-bottom">Categories</h2>
 
-        <!-- Card 1 -->
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+
+            <!-- Card 1 -->
             <div class="col">
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                      style="background-image: url('https://media-cdn.tripadvisor.com/media/photo-s/1b/ca/2d/6a/20200814-232925-largejpg.jpg');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Entrées</h2>
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-info">Sur Place</h2>
+
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                                 <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
@@ -27,7 +29,7 @@
                                 <svg class="bi me-2" width="1em" height="1em">
                                     <use href="#geo-fill"></use>
                                 </svg>
-                                <small>Earth</small>
+                                <small class="text-danger">Reserver</small>
                             </li>
                             <li class="d-flex align-items-center">
                                 <svg class="bi me-2" width="1em" height="1em">
@@ -36,6 +38,7 @@
                                 <small>3d</small>
                             </li>
                         </ul>
+
                     </div>
                 </div>
             </div>
@@ -46,7 +49,7 @@
                 <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
                      style="background-image: url('https://media-cdn.tripadvisor.com/media/photo-s/1a/c6/90/12/photo1jpg.jpg');">
                     <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Plats</h2>
+                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold text-info">À Emporter</h2>
                         <ul class="d-flex list-unstyled mt-auto">
                             <li class="me-auto">
                                 <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
@@ -56,7 +59,7 @@
                                 <svg class="bi me-2" width="1em" height="1em">
                                     <use href="#geo-fill"></use>
                                 </svg>
-                                <small>Pakistan</small>
+                                <small class="text-danger">Appeler</small>
                             </li>
                             <li class="d-flex align-items-center">
                                 <svg class="bi me-2" width="1em" height="1em">
@@ -68,34 +71,6 @@
                     </div>
                 </div>
 
-            </div>
-
-            <!-- Card 3 -->
-            <div class="col">
-                <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-                     style="background-image: url('https://img.restaurantguru.com/rd21-Restaurant-grill-La-Vieille-Mairie-food.jpg');">
-                    <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-                        <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Desserts</h2>
-                        <ul class="d-flex list-unstyled mt-auto">
-                            <li class="me-auto">
-                                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                                     class="rounded-circle border border-white">
-                            </li>
-                            <li class="d-flex align-items-center me-3">
-                                <svg class="bi me-2" width="1em" height="1em">
-                                    <use href="#geo-fill"></use>
-                                </svg>
-                                <small>California</small>
-                            </li>
-                            <li class="d-flex align-items-center">
-                                <svg class="bi me-2" width="1em" height="1em">
-                                    <use href="#calendar3"></use>
-                                </svg>
-                                <small>5d</small>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
             </div>
 
         </div>
