--- a/restaurant/templates/restaurant/plats.html
+++ b/restaurant/templates/restaurant/plats.html
@@ -3,5 +3,19 @@
 
 {% block content %}
 
+    <!-- Titre1 -->
+    <div class="hero">
+        <h1 class="titre1 text-center text-light">La Vieille Mairie</h1>
+    </div>
+
+    <div class="box">
+        <div class="card">
+
+        </div>
+
+        <div class="card">
+
+        </div>
+    </div>
 
 {% endblock %}
