--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -23,7 +23,7 @@
 
                         <!-- A propos -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">À Propos</a>
+                            <a class="nav-link" href="{% url 'plat' %}">Plats</a>
                         </li>
 
                         <!-- Categories liste -->
