--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -13,7 +13,7 @@ body {
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    margin: auto;
+    margin: 30px auto;
     height: 100% !important;
 }
 
