debut design la carte

--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -21,9 +21,14 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
 
-                        <!-- A propos -->
+                        <!-- La carte -->
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'plat' %}">Plats</a>
+                            <a class="nav-link" href="{% url 'carte' %}">La carte</a>
+                        </li>
+
+                        <!-- Sur place / Emporter -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'plat' %}">Choix</a>
                         </li>
 
                         <!-- Categories liste -->
