--- a/restaurant/templates/restaurant/plats.html
+++ b/restaurant/templates/restaurant/plats.html
@@ -315,7 +315,7 @@
     </style>
     <!-- Titre1 -->
     <div class="hero">
-        <h1 class="titre1 text-center text-light">La Vieille Mairie</h1>
+        <h1 class="titre1 text-center text-light">Votre choix ?</h1>
     </div>
 
     <div class="row">
