--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -7,7 +7,7 @@
             <div class="container-fluid">
 
                 <!-- Titre1 -->
-                <a class="navbar-brand" href="#">LVM</a>
+                <a class="navbar-brand" href="{% url 'index' %}">LVM</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                         aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,7 @@
 
                         <!-- Acceuil -->
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
                         </li>
 
                         <!-- La carte -->
