debut design la carte

--- a/restaurant/templates/restaurant/la_carte.html
+++ b/restaurant/templates/restaurant/la_carte.html
@@ -343,8 +343,8 @@
                 </div>
                 <ul class="ul-m2">
                     {% for element in elements %}
-                        <li class="li-m2-1">{{ element.nom }}: {{ element.description }}<span
-                                class="prix">{{ element.prix }}</span></li>
+                        <li class="li-m2-1">{{ element.nom }}: {{ element.description }}
+                            <span class="prix">{{ element.prix }}</span></li>
                     {% endfor %}
                     <!--
                         <li class="li-m2-1">Tartare de poulpe acidulé aux zests d’oranges<span class="prix">79€</span></li>
